--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "tsc",
     "dev": "netlify dev",
-    "exec": "ts-node ./src/client/driver/index.ts"
+    "exec": "ts-node ./src/client/driver/index.ts",
+    "lint": "rome check ./src",
+    "lint:fix": "rome format --write ./src"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "netlify-cli": "^13.0.1",
+    "rome": "12.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
