--- a/.github/workflows/tech-summary-dev.yml
+++ b/.github/workflows/tech-summary-dev.yml
@@ -8,11 +8,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    environment:
+      name: dev
     strategy:
       matrix:
         node-version: [16.x]
-
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
