--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/mitsuoka0423/netlify-functions-template.ts#readme",
   "dependencies": {
     "axios": "^1.3.4",
+    "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
     "openai": "^3.2.1"
   },
