--- a/.github/workflows/tech-summary-dev.yml
+++ b/.github/workflows/tech-summary-dev.yml
@@ -22,4 +22,4 @@ jobs:
         cache: 'npm'
     - run: npm i
     - run: npm run build --if-present
-    - run: DISCORD_WEBHOOK_URL=${{ secrets.DISCORD_WEBHOOK_URL }} OPEN_AI_API_KEY=${{ secrets.OPEN_AI_API_KEY }} node ./dist/index.js
+    - run: DISCORD_WEBHOOK_URL=${{ secrets.DISCORD_WEBHOOK_URL }} DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }} DISCORD_GUILD_ID=${{ secrets.DISCORD_GUILD_ID }} OPEN_AI_API_KEY=${{ secrets.OPEN_AI_API_KEY }} node ./dist/index.js
